--- a/install
+++ b/install
@@ -5,5 +5,23 @@ set -eo pipefail; [[ $DOKKU_TRACE ]] && set -x
 apt-get update
 apt-get install -y git-secret gnupg
 
-# generate gpg key for server
-gpg --gen-key # this is interactive so need to alter this
+[[ $(gpg --list-keys "$(hostname)") ]] || {
+  # generate gpg key for server
+  cat >foo <<EOF
+      %echo Generating a basic OpenPGP key
+      Key-Type: DSA
+      Key-Length: 1024
+      Subkey-Type: ELG-E
+      Subkey-Length: 1024
+      Name-Real: $(hostname)
+      Name-Comment: Server key for $(hostname)
+      Name-Email: server@$(hostname).bar
+      Expire-Date: 0
+      Passphrase: ""
+      # Do a commit here, so that we can later print "done" :-)
+      %commit
+      %echo done
+EOF
+  gpg --batch --generate-key foo
+  rm foo
+}
